# dart_ffi_interaction

./: .gitignore  README.md
native_notifications/dart/: ffi_notifications.dart  main.dart
native_notifications/native/: win_native.cpp  win_native.def
native_simple_ble_interaction/dart/: ble_wrapper.dart  main.dart  native_bluetooth.dart  pubspec.yaml
native_simple_ble_interaction/dart/old/: main.dart
native_simple_ble_interaction/dart/types/: NativeBleDevice.dart
native_simple_ble_interaction/native/: CMakeLists.txt  win_native.cpp  win_native.def
native_simple_ble_interaction/native/old/: c_export.cpp  c_export.def
native_state/dart/: main.dart  native_state.dart  pubspec.yaml
native_state/native/: CMakeLists.txt  win_native.cpp  win_native.def
simplebleextensionideas/: ble_device.cpp  sample_walkthrough.cpp
